fix canvas stretch issue, add more UI features

--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@ body {
     /* object-fit: contain; */
     /* width: 100%; */
     /* height: auto; */
-    width: 480px;
-    height: 240px;
+    width: 263px;
+    height: 191px;
 }
 .playerContainer {
     width: 100%;
@@ -55,7 +55,7 @@ body {
     display:none;
 }
 .videoMainLargeControl {
-    /* background-color: transparent;  */
+    background-color: rgba(192,192,192,0.5);
     top: 0px;
     left: 0px;
     width:"auto";
@@ -79,7 +79,7 @@ body {
 
 .videoContainer {
     width: 100%;
-    height: 100%;
+    height: 56.25vw;
     border: solid 1px #0e0;
 }
 
@@ -93,6 +93,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: rgba(192,192,192,0.5);
 }
 
 .videoProgressBar {
@@ -117,6 +118,12 @@ body {
 
 .videoProgressSeekerRect {
     fill: rgba(64,64,64,0.5)
+}
+
+.popPlayTime {
+    position:fixed;
+    visibility:hidden;
+     /* display:none; */
 }
 
 
